优化树木生成多样性不锁定固定树木种类